memo-layout 디자인변경 & 사이드바 카테고리에서 select할 경우URL쿼리구별식으로 변경
