# backend/src/modules/openAi/dto/createCompletion.dto.ts
@@ -1,15 +1,0 @@
-import * as Validator from 'class-validator';
-import { ApiProperty } from '@nestjs/swagger';
-export class CreateCompletionDto {
-  @ApiProperty()
-  @Validator.IsString()
-  question: string;
-
-  @ApiProperty({ required: false })
-  @Validator.IsString()
-  model?: string;
-
-  @ApiProperty({ required: false })
-  @Validator.IsNumber()
-  temperature?: number;
-}
