# backend/src/modules/openAi/openAi.controller.ts
@@ -2,7 +2,7 @@ import { Body, Controller, Post } from '@nestjs/common';
 import { ApiResponse, ApiTags } from '@nestjs/swagger';
 import { CreateCompletionResponse } from 'openai';
 import { OpenAiService } from './openAi.service';
-import { CreateCompletionDto } from './dto/createCompletion.dto';
+import { CreateCompletionInputDto } from './dto/createCompletionInputDto';
 
 @ApiTags('OpenAi')
 @Controller('openAi')
@@ -10,9 +10,9 @@ export class OpenAiController {
   constructor(private readonly aiService: OpenAiService) {}
 
   @ApiResponse({ type: Promise<CreateCompletionResponse> })
-  @Post()
+  @Post('createCompletion')
   async createCompletion(
-    @Body() createCompletionDto: CreateCompletionDto,
+    @Body() createCompletionDto: CreateCompletionInputDto,
   ): Promise<CreateCompletionResponse> {
     return this.aiService.createCompletion(createCompletionDto);
   }
